# finite-state-automaton

./: CMakeLists.txt  README.md  helper.c  helper.h  run.c  tester.c  validator.c
